[package]
name = "charset"
description = "Thunderbird-compatible character encoding decoding for email"
version = "0.1.2"                                                            # Remember to keep html_root_url in lib.rs in sync!
authors = ["Henri Sivonen <hsivonen@hsivonen.fi>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/charset/"
homepage = "https://docs.rs/charset/"
repository = "https://github.com/hsivonen/charset"
keywords = ["encoding", "email", "unicode", "charset", "utf-7"]
categories = ["text-processing", "encoding", "email"]

[badges]
travis-ci = { repository = "hsivonen/charset" }

[dependencies]
encoding_rs = "0.8.22"
base64 = { version = "0.11.0", default-features = false }
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
serde_derive = "1.0"
bincode = "0.8"
serde_json = "1.0"

[features]
default = ["std"]
alloc = ["base64/alloc", "serde/alloc"]
std = ["base64/std", "serde/std"]
