[package]
name = "charset"
description = "Thunderbird-compatible character encoding decoding for email"
version = "0.1.3"
authors = ["Henri Sivonen <hsivonen@hsivonen.fi>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/charset/"
homepage = "https://docs.rs/charset/"
repository = "https://github.com/hsivonen/charset"
keywords = ["encoding", "email", "unicode", "charset", "utf-7"]
categories = ["text-processing", "encoding", "email"]

[badges]
travis-ci = { repository = "hsivonen/charset" }

[dependencies]
encoding_rs = "0.8.22"
base64 = "0.13"
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_derive = "1.0"
bincode = "1.2.1"
serde_json = "1.0"
